--- a/QtGUI/GUITest/mainwindow.ui
+++ b/QtGUI/GUITest/mainwindow.ui
@@ -40,6 +40,19 @@
      <string>Switch LED Off</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="msgBox">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>180</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
